<?xml version="1.0"?>
<package format="2">
  <name>ros_aruco</name>
  <version>0.0.0</version>
  <description>Yet another marker detection package</description>

  <maintainer email="st.fuchs.tr@gmail.com">Steffen Fuchs</maintainer>
  <author email="st.fuchs.tr@gmail.com">Steffen Fuchs</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>roscpp</depend>
  <depend>ros_aruco_msgs</depend>
  <depend>tf2_ros</depend>


  <export>
  </export>
</package>
