<?xml version="1.0"?>
<package format="2">
  <name>ros_aruco_msgs</name>
  <version>0.0.0</version>
  <description>The ros_aruco_msgs package</description>

  <maintainer email="st.fuchs.tr@gmail.com">Steffen Fuchs</maintainer>
  <author email="st.fuchs.tr@gmail.com">Steffen Fuchs</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
